[COMP] Pagination : correction z-index du composant par rapport au bouton de fermeture.

--- a/src/components/COMPONENTS/Navigation/Pagination/main.scss
+++ b/src/components/COMPONENTS/Navigation/Pagination/main.scss
@@ -11,6 +11,7 @@
             @include display-flex();
             @include justify-content(center, center);
             position: relative;
+            z-index: 2;
             
             > li {
                 height: $height-finger;
